[FIX]: Replace Display Property with Visibility for Orbs Section to Fix Screen Shift (#5773)
* feat: add new bullet to surface full config example on landing page

* feat: add experiment logic to display link to full example config bullet if in treatment

* fix: replace display property with visibility for orb section

* remove changes from experiment branch addressed in another docs PR  and revert files back to origin master version

--- a/jekyll/assets/css/main.scss
+++ b/jekyll/assets/css/main.scss
@@ -512,8 +512,12 @@ h6{
 	display: none
 }
 
+/*
+*  Experiment Key: dd_add_orb_section_to_docs_landing_page_test
+*  https://app.optimizely.com/v2/projects/16812830475/experiments/20598037463/variations
+*/
 #orb-section {
-	display: none
+	visibility: hidden
 }
 
 /*
